# GELI

./: CMakeLists.txt  README.md
Geant4/: CMakeLists.txt  GELI.cc  MacroTesting.mac  config.xml  gamma.mac  geometry.xml  gps.mac  vis.mac
Geant4/GEANT_elitpc_model_20180302/: elitpc_geant_materials.txt
Geant4/GEANT_elitpc_model_20180302/STL/: elitpc_geant_ISO 7046-1 - M2 x 5 - 4.8 - HDIN EN ISO_18.stl  elitpc_geant_ISO 7046-1 - M2 x 5 - 4.8 - HDIN EN ISO_183.stl  elitpc_geant_ISO 7046-1 - M2 x 5 - 4.8 - HDIN EN ISO_21.stl  elitpc_geant_ISO 7046-1 - M2 x 5 - 4.8 - HDIN EN ISO_24.stl  elitpc_geant_ISO 7046-1 - M2 x 5 - 4.8 - HDIN EN ISO_27.stl  elitpc_geant_ISO 7046-1 - M2 x 5 - 4.8 - HDIN EN ISO_30.stl  elitpc_geant_ISO 7046-1 - M2 x 5 - 4.8 - HDIN EN ISO_33.stl  elitpc_geant_ISO 7046-1 - M2 x 5 - 4.8 - HDIN EN ISO_36.stl  elitpc_geant_ISO 7046-1 - M2 x 5 - 4.8 - HDIN EN ISO_39.stl  elitpc_geant_ISO 7046-1 - M2 x 5 - 4.8 - HDIN EN ISO_42.stl  elitpc_geant_ISO 7046-1 - M2 x 5 - 4.8 - HDIN EN ISO_45.stl  elitpc_geant_ISO 7046-1 - M2 x 5 - 4.8 - HDIN EN ISO_48.stl  elitpc_geant_ISO 7046-1 - M2 x 5 - 4.8 - HDIN EN ISO_51.stl  elitpc_geant_ISO_KF40_centering_ring_modified_201.stl  elitpc_geant_ISO_KF40_clamp_203.stl  elitpc_geant_ISO_KF40_clamp_204.stl  elitpc_geant_ISO_KF40_clamp_205.stl  elitpc_geant_ISO_KF40_full_nipple_130mm_198.stl  elitpc_geant_ISO_KF40_weld_flange_192.stl  elitpc_geant_ISO_KF40_weld_flange_193.stl  elitpc_geant_ISO_KF40_weld_flange_194.stl  elitpc_geant_ISO_KF40_weld_flange_195.stl  elitpc_geant_ISO_KF40_window_flange_35mm_199.stl  elitpc_geant_ISO_KF40_window_kapton_200.stl  elitpc_geant_cathode_plate_181.stl  elitpc_geant_drift_conn_17.stl  elitpc_geant_drift_conn_182.stl  elitpc_geant_drift_conn_20.stl  elitpc_geant_drift_conn_23.stl  elitpc_geant_drift_conn_26.stl  elitpc_geant_drift_conn_29.stl  elitpc_geant_drift_conn_32.stl  elitpc_geant_drift_conn_35.stl  elitpc_geant_drift_conn_38.stl  elitpc_geant_drift_conn_41.stl  elitpc_geant_drift_conn_44.stl  elitpc_geant_drift_conn_47.stl  elitpc_geant_drift_conn_50.stl  elitpc_geant_drift_frame1_180.stl  elitpc_geant_drift_frame2_184.stl  (+162 more)
Geant4/include/: CentralConfig.hh  ELItpc.hh  EventSaver.hh  GELIActionInitializer.hh  GELIAnalysisManager.hh  GELIDetectorConstruction.hh  GELIEventAction.hh  GELIEventGenerator.hh  GELIPhysicsList.hh  GELIPrimaryGeneratorAction.hh  GELIRunAction.hh  GELISteppingAction.hh  GELISteppingVerbose.hh  GELITPCDetector.hh  GELITabulatedField3D.hh  GELITrackingAction.hh  GeometryConfig.hh  MaterialBuilder.hh  SolidDescriptor.hh  VolumeBuilder.hh
Geant4/src/: CentralConfig.cc  ELItpc.cc  GELIActionInitializer.cc  GELIAnalysisManager.cc  GELIDetectorConstruction.cc  GELIEventAction.cc  GELIEventGenerator.cc  GELIMaterialBuilder.cpp  GELIPhysicsList.cc  GELIPrimaryGeneratorAction.cc  GELIRunAction.cc  GELISteppingAction.cc  GELISteppingVerbose.cc  GELITPCDetector.cc  GELITabulatedField3D.cc  GELITabulatedField3D.cc_fixed  GELITrackingAction.cc  GeometryConfig.cc  MaterialBuilder.cc  VolumeBuilder.cc
SimEvent/: CMakeLists.txt  LinkDef.h  SimEvent.cc  read.cc
TransportSimulator/: CMakeLists.txt  MT.cc  config.xml  main.cc  run.sh  synthetic.cc  test.cc
TransportSimulator/include/: AttachmentSimulator.hh  DiffusionSimulator.hh  EfficiencySimulator.hh  EventReader.hh  GainSimulator.hh  Matrix3D.hh  Worker.hh
TransportSimulator/src/: AttachmentSimulator.cc  DiffusionSimulator.cc  EfficiencySimulator.cc  EventReader.cc  GainSimulator.cc  Matrix3D.cc  Worker.cc
Utilities/: CMakeLists.txt
Utilities/include/: CentralConfig.hh  SimEvent.hh  SimHit.hh
Utilities/src/: CentralConfig.cc  SimEvent.cc
docs/: Doxyfile.in  MainPage.h
